Bug 1020539 - Clear about:networking hostname list when deleting history. r=mcmanus, a=lmandel